tests/ui/forged_witness.stderr
error: cannot construct `fulcrum::HotToCold` with struct literal syntax due to private fields
  --> tests/ui/forged_witness.rs:12:19
   |
12 |     let _forged = HotToCold {
   |                   ^^^^^^^^^
   |
   = note: ...and other private field `_witness` that was not provided
